--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -29,7 +29,7 @@ article.feature {
 	border: none;
 	box-shadow: 0px 0px 15px rgba(0,0,0,0.10);
 //	border-radius: 3px;
-	border-radius: 20px 20px 0 0;
+	border-radius: 10px 10px 10px 10px;
 }
 
 // Etiquetas para visualizar DOIs
