--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -40,20 +40,17 @@ article.feature {
     margin: 5px 0;
     font-size: 0.9em;
     min-width: 400px;
-		empty-cells: hide;
-    //text-align: left;
+    text-align: left;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.05);
-    border-radius: 10px 10px 0 0;
+    border-radius: 5px 5px 5px 5px;
     overflow: hidden;
 }
 .table thead tr {
-    background-color: #e0dede;
-		display:none;
+    background-color: #4d4d4d;
 }
 .table th,
 .table thead td,
 .table thead th {
-    border-width: 0;
     border: none;
     font-weight: bold;
     color: #ffffff;
@@ -68,45 +65,44 @@ article.feature {
 .content table td,
 .feature-content table td {
     border: none;
-    border-width: 0 0 0px;
     padding: 7px 20px;
 }
 .table tbody tr {
-//*    border-bottom: 1px solid #dddddd;
     border: none;
 }
 .table tbody tr:nth-of-type(even) {
     background-color: #f9f9f9;
 }
 .table tbody tr:last-of-type {
-    border-bottom: 1px solid #e0dede;
+    border-bottom: 1px solid #4d4d4d;
 }
 .table tbody tr.active-row {
     font-weight: bold;
-    color: #e0dede;
+    color: #1b8172;
 }
 .content table thead th,
 .content table thead td {
     color: #ffffff;
 }
 .content table td, .feature-content table td, .content table th, .feature-content table th {
-        padding: 20px 15px;
+    padding: 12px 12px;
 }
-
-
 
 // Tabla de integrantes
+.integrantes .table {
+    font-size: 1em;
+}
 
-.integrantes table img {
-  width: 60px;
-  min-width: 60px; /* Selección del ancho y alto de las celdas*/
-  height: 150px;
-  min-height: 150px;
+.integrantes table thead tr {
+		display: none;
 }
-th.orga1, th.orga2, th.orga3, th.orga4 { /* Fijar el tamaño de las columnas, se puede fijar por individual cada una con un % diferente o en grupo*/
-  width: 25%;
-  border: 10px;
+.integrantes table tbody tr:last-of-type {
+    border-bottom: none;
 }
+.integrantes table tbody tr td {
+    padding: 30px 30px;
+}
+
 
 // Etiquetas para visualizar DOIs
 .myDoi {
